# elk-gpio-protocol

./: .gitignore  CMakeLists.txt  README.md  xmos_control_protocol.h  xmos_gpio_protocol.h
include/gpio_protocol/: gpio_protocol.h
lib/include/gpio_protocol_client/: gpio_client.h  gpio_logger_interface.h
lib/src/: analog_ctrlr.h  ctrlr_set.h  gpio_fifo.h  gpio_system_interface.h  input_ctrlr.h  output_ctrlr.h
